--- a/Admin-Report/Infraesctructure/Infraesctructure.csproj
+++ b/Admin-Report/Infraesctructure/Infraesctructure.csproj
@@ -41,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Data\CallIsInQueuesSQL.cs" />
+    <Compile Include="Data\DBContext.cs" />
+    <Compile Include="Interfaces\ICallsInQueuesProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CallsInQueuesProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
