--- a/Admin-Report/Presentation/packages.config
+++ b/Admin-Report/Presentation/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml" version="2.11.3" targetFramework="net48" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="GridExtra.Core.WPF" version="0.5.1" targetFramework="net48" />
   <package id="MaterialDesignColors" version="3.1.0" targetFramework="net48" />
   <package id="MaterialDesignThemes" version="5.1.0" targetFramework="net48" />
@@ -9,6 +10,11 @@
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net48" />
   <package id="Notifications.Wpf" version="0.1.1" targetFramework="net48" />
   <package id="SpreadsheetLight" version="3.5.0" targetFramework="net48" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.118.0" targetFramework="net48" />
+  <package id="System.Data.SQLite" version="1.0.118.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Core" version="1.0.118.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.EF6" version="1.0.118.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Linq" version="1.0.118.0" targetFramework="net48" />
   <package id="System.Drawing.Common" version="5.0.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.Packaging" version="4.7.0" targetFramework="net48" />
