--- a/Admin-Report/Presentation/Presentation.csproj
+++ b/Admin-Report/Presentation/Presentation.csproj
@@ -229,6 +229,9 @@
   <ItemGroup>
     <Resource Include="Assets\smart-logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\splash.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.5.1.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.5.1.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
